# ecs_test

./: .gitmodules  CMakeLists.txt  Components.h  Constants.h  GameManager.cpp  GameManager.h  Renderer.cpp  Renderer.h  SystemManager.cpp  SystemManager.h  Systems.h  main.cpp
components/: Block.h  Controls.h  Figure.cpp  Figure.h  FigurePattern.cpp  FigurePattern.h  FigureState.cpp  FigureState.h  Player.h  Rotatable.h
rendering/: BlockRenderer.cpp  BlockRenderer.h  BoardsRenderer.cpp  BoardsRenderer.h  constants.h
resources/figures/: I  L  O  Z
systems/: BoostSystem.cpp  BoostSystem.h  ControlSystem.cpp  ControlSystem.h  FiguresSpawnerSystem.cpp  FiguresSpawnerSystem.h  RotatingSystem.cpp  RotatingSystem.h  RowsCleaningSystem.cpp  RowsCleaningSystem.h  System.h  utils.cpp  utils.h
tests/: test_GameManager.cpp  test_components.cpp  test_systems.cpp  tests.cpp  utils.h
tests/systems/: Boost.cpp  Control.cpp  FigureSpawner.cpp  Rotating.cpp  RowsCleaning.cpp  base.cpp  base.h
utils/: common.h  getters.cpp  getters.h
